--- a/Inventarization.Android.Client/app/src/main/res/layout/activity_main.xml
+++ b/Inventarization.Android.Client/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,11 @@
         android:id="@+id/zone_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.05"
         android:gravity="center_horizontal"
         android:text="@string/zone"
+        android:maxLines="1"
+        android:inputType="text"
         android:textSize="20dp" />
 
     <EditText
@@ -18,36 +21,72 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_weight="0.04"
         android:gravity="center"
-        android:hint="@string/scanner_hint"
-        android:layout_weight="0.04" />
+        android:hint="@string/scanner_hint" />
+
+    <EditText
+        android:id="@+id/quantity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.05"
+        android:ems="10"
+        android:inputType="number" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_weight="0.51" />
+        android:layout_weight="1.10" />
 
-    <View
-    android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-    <Button
-        android:id="@+id/scan"
+    <ListView
+        android:id="@+id/historyList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/start" />
-    <Button
-        android:id="@+id/close"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/close" />
+        android:layout_height="122dp"
+        android:layout_weight="2.10"
+        android:textSize="1dp"
+        android:textAlignment="center"/>
 
-    <Button
-        android:id="@+id/button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/close_zone" />
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/linearLayout">
+
+        <Button
+            android:id="@+id/okButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_weight="1"
+            android:elevation="10dp"
+            android:enabled="false"
+            android:text="@string/Accept"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/findButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_weight="1"
+            android:text="@string/Search"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/closeButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_weight="1"
+            android:enabled="true"
+            android:text="@string/close_zone"
+            android:visibility="visible" />
+    </LinearLayout>
 
 </LinearLayout>
