--- a/Inventarization.Android.Client/app/src/main/res/layout/activity_main.xml
+++ b/Inventarization.Android.Client/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,27 @@
         android:gravity="center"
         android:hint="@string/scanner_hint" />
 
-    <EditText
-        android:id="@+id/quantity"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.05"
-        android:ems="10"
-        android:inputType="number" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/quantityLabel"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="количество" />
+
+        <EditText
+            android:id="@+id/quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.01"
+            android:ems="10"
+            android:inputType="number" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/description"
@@ -39,11 +53,18 @@
         android:layout_height="wrap_content"
         android:layout_weight="1.10" />
 
+    <TextView
+        android:id="@+id/lastActionsLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.05"
+        android:text="Последние действия" />
+
     <ListView
         android:id="@+id/historyList"
         android:layout_width="match_parent"
         android:layout_height="122dp"
-        android:layout_weight="2.10"
+        android:layout_weight="108.46"
         android:textSize="1dp"
         android:textAlignment="center"/>
 
@@ -75,7 +96,8 @@
             android:layout_alignParentRight="true"
             android:layout_weight="1"
             android:text="@string/Search"
-            android:visibility="visible" />
+            android:visibility="visible"
+            android:enabled="false"/>
 
         <Button
             android:id="@+id/closeButton"
