авторизация на andriod

--- a/Inventarization.Android.Client/app/src/main/res/layout/activity_login.xml
+++ b/Inventarization.Android.Client/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,8 @@
                 android:hint="@string/prompt_login"
                 android:inputType="text"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:text="test" />
 
             <EditText
                 android:id="@+id/password"
@@ -49,7 +50,8 @@
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:text="test" />
 
             <Button
                 android:id="@+id/sign_in_button"
