--- a/Inventarization.Android.Client/app/src/main/res/layout/activity_zone_select.xml
+++ b/Inventarization.Android.Client/app/src/main/res/layout/activity_zone_select.xml
@@ -56,7 +56,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="goToActionTypeSelect"
-                android:text="Назад" />
+                android:text="Назад"
+                android:visibility="gone" />
         </LinearLayout>
 
         <TextView
