--- a/Inventarization.Android.Client/app/src/main/res/layout/activity_blind_scan.xml
+++ b/Inventarization.Android.Client/app/src/main/res/layout/activity_blind_scan.xml
@@ -8,16 +8,16 @@
 
     <TextView
         android:id="@+id/zoneLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="367dp"
+        android:layout_height="28dp"
         android:layout_weight="0.05"
         android:gravity="center_horizontal"
         android:inputType="text"
         android:maxLines="1"
         android:text="@string/zone"
         android:textSize="20dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp" />
 
     <LinearLayout
         android:layout_width="368dp"
