--- a/Inventarization.Android.Client/app/src/main/res/layout/activity_main.xml
+++ b/Inventarization.Android.Client/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center"
@@ -11,19 +12,21 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.05"
         android:gravity="center_horizontal"
-        android:text="@string/zone"
-        android:maxLines="1"
         android:inputType="text"
-        android:textSize="20dp" />
+        android:maxLines="1"
+        android:text="@string/zone"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/scan_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_weight="0.04"
         android:gravity="center"
-        android:hint="@string/scanner_hint" />
+        android:hint="@string/scanner_hint"
+        android:singleLine="true"
+        tools:text="4601835000706" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,18 +66,18 @@
     <ListView
         android:id="@+id/historyList"
         android:layout_width="match_parent"
-        android:layout_height="122dp"
+        android:layout_height="wrap_content"
         android:layout_weight="108.46"
-        android:textSize="1dp"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textSize="1dp" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:id="@+id/linearLayout">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/okButton"
@@ -89,15 +92,14 @@
             android:visibility="visible" />
 
         <Button
-            android:id="@+id/findButton"
-            android:layout_width="match_parent"
+            android:id="@+id/addButton"
+            android:layout_width="130dp"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_weight="1"
-            android:text="@string/Search"
-            android:visibility="visible"
-            android:enabled="false"/>
+            android:enabled="false"
+            android:text="@string/Add"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/closeButton"
