--- a/Inventarization.Android.Client/app/src/main/res/layout/activity_workflow_selection.xml
+++ b/Inventarization.Android.Client/app/src/main/res/layout/activity_workflow_selection.xml
@@ -8,44 +8,34 @@
     android:orientation="vertical"
     android:weightSum="1">
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="349dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:text="Выберите тип сканирования"
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
-        <RadioButton
-            android:id="@+id/firstScan"
-            android:layout_width="match_parent"
-            android:layout_height="66dp"
-            android:checked="true"
-            android:onClick="onRadioButtonClicked"
-            android:text="Первое сканирование"
-            android:visibility="visible" />
+    <Button
+        android:id="@+id/firstScan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onTypeButtonClicked"
+        android:text="@string/first_scan" />
 
-        <RadioButton
-            android:id="@+id/secondScan"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:onClick="onRadioButtonClicked"
-            android:text="Повторное сканирование"
-            android:visibility="visible" />
+    <Button
+        android:id="@+id/secondScan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onTypeButtonClicked"
+        android:text="@string/second_scan" />
 
-        <RadioButton
-            android:id="@+id/blindScan"
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            android:onClick="onRadioButtonClicked"
-            android:text="Слепой пересчёт"
-            android:visibility="visible" />
-
-    </RadioGroup>
+    <Button
+        android:id="@+id/blindScan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onTypeButtonClicked"
+        android:text="@string/blind_scan" />
 
     <Button
         android:id="@+id/button"
@@ -56,6 +46,7 @@
         android:layout_marginTop="10dp"
         android:onClick="onOkButtonClicked"
         android:text="ОК"
+        android:visibility="gone"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
