--- a/Inventarization.Android.Client/app/src/main/res/layout/activity_login.xml
+++ b/Inventarization.Android.Client/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,12 @@
                 android:text="@string/action_sign_in"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
